Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-35328

Visual Studio project generation broken for WinRT

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P2: Important P2: Important
    • 5.3.0
    • 5.3.0
    • Build tools: qmake
    • WinRT
    • fc5e948ea8b2f9b54c3468d32f7e04f92d247567 503fd267da497ae9fd5d1a17d5bbfd314b4311d7 2984ef35c5d1277896b9f440ff8c226fdb98f9ac f59dfe3e633c5b9fdc78c0897617be47a553a064 d5e52ecf6da473591edd83dc6609301421fc51b9 93aec932ff6471b39cd3b577079407f145996ec2 f13f10ee

      Currently qmake -tp vc does not generate something visual studio can use for WinRT. Needs some updates.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            andrew.knight Andrew Knight
            mkalinow Maurice Kalinowski
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes